# wakeword

./: Cargo.toml
.cargo/: config.toml
embedded_wakew/: .gitignore  Cargo.toml
embedded_wakew/src/: lib.rs  main.rs  utils.rs
src/: dtw.rs  lib.rs
tests/: dtw_wav.rs  test.rs  test_mfcc_similarity.rs
to_wav/: main.py  pyproject.toml
wakew/: Cargo.toml
wakew/examples/: dump_wav.rs
wakew/src/: dtw.rs  lib.rs  mfcc.rs  similarities.rs
wakew/tests/: dtw_wav.rs
wakew_microbit/: Cargo.toml
wakew_microbit/src/: utils.rs
