[package]
edition = "2024"
name = "wake_word"
version = "0.1.0"

[[bin]]
name="wake_word"
test=false
bench=false

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "defmt", "executor-interrupt", "executor-thread"] }
embassy-nrf = { version = "0.10.0", features = ["defmt", "nrf52833", "time", "time-driver-rtc1", "nfc-pins-as-gpio"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"

[profile.release]
debug = 2
